@@ -4,7 +4,7 @@ runit (0.6.4-1) sarge; urgency=low
   * preinst: new; create hardlink /sbin/runit.old -> /sbin/runit on
     upgrade.
 
- -- Gerrit Pape <pape@smarden.org>  Sun,  6 Oct 2002 11:41:41 +0200
+ -- Gerrit Pape <pape@smarden.org>  Sun,  6 Oct 2002 12:24:15 +0200
 
 runit (0.6.0-1) sarge; urgency=low
 
